Fri Aug  8 14:22:01 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression/test_i.h:
        * tests/Bug_3068_Regression/test_i.inl:

          Removed a deprecated macro; cleaned up whitespace.

Fri Aug  8 14:08:58 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression/Bug_3068_Regression.mpc:
        * tests/Bug_3068_Regression/test.idl:
        * tests/Bug_3068_Regression/test_i.h:

          Addressed "fuzz" errors.

Fri Aug  8 12:10:12 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Nested_Event_Loop/test_i.cpp:

          Fixed a compile error in CORBA/e compact and micro builds.

Thu Aug  7 23:19:55 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/Nested_Event_Loop/client.cpp:
        * tests/Nested_Event_Loop/test_i.h:
        * tests/Nested_Event_Loop/test_i.cpp:

          Made client servant explicitly activated for CORBA e build
          since CORBA e does not allow implicit servant activation. This
          should fix test failure due to WrongPolicy exception.

Thu Aug  7 21:30:32 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3068_Regression:

          Added a test for bug 3068.

Thu Aug  7 19:15:34 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * NEWS:

          Added a news entry for the ImR Activator change in
          Thu Jul 31 15:13:48 UTC 2008  Adam Mitz  <mitza@ociweb.com>

Thu Aug  7 17:46:45 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        This commit fixes Bug 2935 (again) and resolves other transport cache
        management issues.  The key issue of 2935 is that the transport is
        cached while the connection is in progress, so that other threads see
        that there's a connection in progress and don't start their own.
        That feature is essentially restoring one of the changes from
        Tue May 20 18:05:08 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
        that were reverted in